--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
     <textarea rows="5" cols="50">{{ rra_code }}</textarea>
   {% endif %}
   
-  <p style="float:right">Written by <a href="http://powdahound.com">Garret Heaton</a></p>
+  <p style="float:right">Written by <a href="http://powdahound.com">Garret Heaton</a>. <a href="https://github.com/powdahound/rrdtools/">View source</a>.</p>
 </body>
 </html>
